# grammargrove

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.dockerignore  PROGRESS.md  README.md  docker-compose.yaml  manage.py  package-lock.json  prod-compose.yaml  pyproject.toml  uwsgi.development.ini  uwsgi.ini  uwsgi.production.ini
api/: views.py
billing/: models.py  permissions.py  serializers.py  stripe_utils.py  urls.py  views.py
conf/: nginx.conf
cron.d/: tasks.daily
feedback/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.js  vite.config.development.ts
grammargrove/: asgi.py  pagination.py  pinyin_utils.py  settings.py  tasks.py  text_utils.py  urls.py  utils.py  wsgi.py
grammarrules/: admin.py  apps.py  examples.py  models.py  pagination.py  parse.py  query.py  serializers.py  urls.py  utils.py  validate.py  views.py
index/: views.py
ops/: admin.py  apps.py  featureflags.py  models.py  urls.py  utils.py  views.py
practicesession/: apps.py  grammarrules.py  mastery.py  models.py  selection.py  serializers.py  urls.py  utils.py  views.py  words.py
quiz/: check.py  grammarrules.py  models.py  pagination.py  query.py  serializers.py  urls.py  utils.py  views.py  words.py
scripts/: deploy-web  manage  rebuild-backend  reload-frontend  runserver  setup-cron  ssl-renew
usergrammarrules/: apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
userpreferences/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  (+5 more)
(+200 files in other folders)
