[tool.poetry]
name = "grammargrove"
version = "0.1.0"
description = ""
authors = ["Andrew Deaver <deaver.andrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.0.0"
psycopg2 = "^2.9.6"
uwsgi = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
